--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Merriweather:ital@1&family=Roboto:wght@700&family=Titillium+Web&display=swap')
+
